--- a/style.css
+++ b/style.css
@@ -221,6 +221,45 @@ nav a:hover {
   background-color: #00b688;
 }
 
+
+/* Unterlagen */
+/* CSS für den Unterlagen-Bereich */
+#unterlagen .bild-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+
+.unterlagen-item {
+  text-align: center;
+  margin: 10px;
+}
+
+.unterlagen-bild {
+  width: 200px;
+  height: auto;
+  border: 1px solid #ccc;
+  padding: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.unterlagen-bild:hover {
+  transform: scale(1.1);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.unterlagen-item p {
+  margin-top: 10px;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+
+
+
+
 /* Kontaktformular */
 #kontakt {
   background-color: #b9b9b9;
