--- a/style.css
+++ b/style.css
@@ -221,32 +221,33 @@ nav a:hover {
   background-color: #00b688;
 }
 
-
 /* Unterlagen */
-/* CSS für den Unterlagen-Bereich */
-#unterlagen .bild-container {
+
+#unterlagen h3 {
+  margin-bottom: 40px;
+}
+
+.bild-container {
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-around;
-  margin-top: 20px;
 }
 
 .unterlagen-item {
   text-align: center;
-  margin: 10px;
+  margin-bottom: 10px;
 }
 
 .unterlagen-bild {
   width: 200px;
   height: auto;
-  border: 1px solid #ccc;
+  border: 1px solid #ffffff;
   padding: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .unterlagen-bild:hover {
-  transform: scale(1.1);
+  transform: scale(1.35);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
@@ -254,9 +255,8 @@ nav a:hover {
   margin-top: 10px;
   font-size: 16px;
   font-weight: bold;
+  color: #fff;
 }
-
-
 
 
 
